Bug 25027: JavaScript parseInt wrong on negative numbers <https://bugs.webkit.org/show_bug.cgi?id=25027>

Contributed by Mihnea Ovidenie
Reviewed by Oliver Hunt

When dealing with negative numbers, parseInt should use ceil instead of floor.


Canonical link: https://commits.webkit.org/34659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42607 268f45cc-cd09-0410-ab3c-d52691b4dbfc