LayoutTests/fast/js/resources/numeric-conversion.js
@@ -26,4 +26,6 @@ shouldBe("parseInt(NaN)", "NaN");
 shouldBe("parseInt(-Infinity)", "NaN");
 shouldBe("parseInt(Infinity)", "NaN");
 
+shouldBe("parseInt(-0.6).toString()", "'0'");
+
 var successfullyParsed = true;
